fix up title sand contrast

--- a/assets/css/core/theme-vars.css
+++ b/assets/css/core/theme-vars.css
@@ -10,6 +10,7 @@
     --body-background: rgba(255, 255, 255, 0.446);
     --entry: rgb(255, 255, 255);
     --primary: rgb(30, 30, 30);
+    --light-primary: rgb(30, 30, 30);
     --secondary: rgb(108, 108, 108);
     --tertiary: rgb(214, 214, 214);
     --content: rgb(31, 31, 31);
